# xseed-utils

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: AddSources.cmake  FindMSEED.cmake
docs/: Gemfile  XSEED Ref SEt download.md  _config.yml  documentation.md  download.md  index.md  ref_set_examples_table.md
docs/_documentation/Alternative Landing Page/: Alternative Landing Page.md
docs/_documentation/Validator/: Basics.md  Introduction.md  Usage.md  Validator.md
docs/_documentation/installation/: installation.md
docs/_documentation/mSEED to xSEED Converter/: Usage.md
docs/_documentation/xSEED Reference Set/: Introduction.md  Overview.md  Reference-Set-1.md  Reference-Set-2.md  Reference-Set-3.md  Reference-Set-A.md  Reference-Set-B.md  Reference-Set-C.md  Reference-Set-D.md  Reference-Set-E.md  Reference-Set-Example-1.md  Reference-Set-Example-2.md  Reference-Set-Example-3.md
docs/_documentation/xSEED to Converter/: Introduction.md  xSEED_to_Converter.md
docs/_documentation/xSEED to JSON/: Introduction.md  Usage.md  xSEED_to_JSON.md
docs/_documentation/xSEED to Text/: Introduction.md  Usage.md  xSEED_to_Text.md
docs/_includes/: footer.html  header.html
docs/_layouts/: home.html
docs/_posts/: 2018-05-10-welcome-to-jekyll.markdown
docs/_sass/: theme.scss
docs/_sass/layouts/: _documentation.scss  _page-not-found.scss
docs/assets/: main.scss
docs/jekyll/_includes/: header.html  html-head.html
docs/jekyll/_layouts/: page.html
docs/jekyll/_sass/: theme.scss
docs/jekyll/_sass/layouts/: _post.scss
docs/jekyll/assets/js/: elevator.min.js
jekyll/: 404.html  _config.yml
jekyll/_includes/: html-head.html
jekyll/_layouts/: default.html  news.html
jekyll/_sass/includes/: _footer.scss  _header.scss
jekyll/_sass/layouts/: _home.scss  _news.scss
libsrc/: CMakeLists.txt
mseedconvert/: CMakeList.txt.inprogress  build.sh  mseedconvert.c
share/: mseed3_conv_CDSN-encoded.mseed
share/json_schemas/: ExtraHeaders-FDSN.schema.json  ExtraHeaders-Manufacturer123.schema.json  ExtraHeaders-OperatorXYZ.schema.json
share/mseed3-records/: mseed3Steim1-AllDifferences-BE.mseed  mseed3Steim1-AllDifferences-LE.mseed  mseed3Steim2-AllDifferences-BE.mseed  mseed3Steim2-AllDifferences-LE.mseed  mseed3_BUD_5457.mseed  mseed3_BUD_7477.mseed  mseed3_Float32-encoded.mseed  mseed3_Float64-encoded.mseed  mseed3_GEOSCOPE-16bit-3exp-encoded.mseed  mseed3_Int32-4096byte.mseed  mseed3_SRO-encoded.mseed  mseed3text-encoded.mseed
share/mseed3-records/With_Extra_Headers/: CDSN-encoded_EH_Manu.mseed3  CDSN-encoded_EH_Manu_Invalid.mseed3  CDSN-encoded_EH_Oper.mseed3  CDSN-encoded_EH_Oper_Invalid.mseed3  DWWSSN-encoded_EH_Manu.mseed3  DWWSSN-encoded_EH_Manu_Invalid.mseed3  DWWSSN-encoded_EH_Oper.mseed3  DWWSSN-encoded_EH_Oper_Invalid.mseed3  Float32-encoded_EH_Manu-Invalid.mseed3  Float32-encoded_EH_Manu.mseed3  Float32-encoded_EH_Oper-Invalid.mseed3  Float32-encoded_EH_Oper.mseed3  Float64-encoded_EH_Manu.mseed3  Float64-encoded_EH_Manu_Invalid.mseed3  Float64-encoded_EH_Oper.mseed3  Float64-encoded_EH_Oper_Invalid.mseed3  GEOSCOPE-16bit-3exp-encoded_EH_Manu.mseed3  GEOSCOPE-16bit-3exp-encoded_EH_Manu_Invalid.mseed3  GEOSCOPE-16bit-3exp-encoded_EH_Oper.mseed3  GEOSCOPE-16bit-3exp-encoded_EH_Oper_Invalid.mseed3  Int16-encoded_EH_Manu.mseed3  Int16-encoded_EH_Manu_Invalid.mseed3  Int16-encoded_EH_Oper.mseed3  Int16-encoded_EH_Oper_Invalid.mseed3  Int32-1024byte_EH_Manu.mseed3  Int32-1024byte_EH_Manu_Invalid.mseed3  Int32-1024byte_EH_Oper.mseed3  Int32-1024byte_EH_Oper_Invalid.mseed3  Int32-128byte_EH_Manu.mseed3  Int32-128byte_EH_Manu_Invalid.mseed3  Int32-128byte_EH_Oper.mseed3  Int32-128byte_EH_Oper_Invalid.mseed3  Int32-2048byte_EH_Manu.mseed3  Int32-2048byte_EH_Manu_Invalid.mseed3  Int32-2048byte_EH_Oper.mseed3  Int32-2048byte_EH_Oper_Invalid.mseed3  Int32-256byte_EH_Manu.mseed3  Int32-256byte_EH_Manu_Invalid.mseed3  Int32-256byte_EH_Oper_Invalid.mseed3  Int32-oneseries-mixedlengths-mixedorder_EH_Manu.mseed3  (+27 more)
src/: CMakeLists.txt
src/mseed2xseed/: CMakeLists.txt  main.c
src/xseed-common/: CMakeLists.txt  array.h  buffer_to_number.c  cmd_opt.h  config.h.in  constants.h  display_help.c  expand_array.c  file_exists.c  file_length.c  files.h  generate_getop_options.c  string.h  unix_functions_for_windows.c  vcs_getopt.h  xseed_string.h
src/xseed2json/: CMakeLists.txt  main.c
src/xseed2text/: CMakeLists.txt  main.c
src/xseedValidator/: CMakeLists.txt  check_extra_headers.c  check_file.c  check_header.c  check_identifier.c  check_payload_text.c  check_payloads.c  main.c  parse_warn_options.c  validator.h  warnings.h
