INCLUDE(ExternalProject)

IF(MSEED_FOUND AND ((MSEED_VERSION VERSION_GREATER "3") OR (MSEED_VERSION VERSION_EQUAL "3")))
    SET(MSEED_CORRECT_VERSION_FOUND TRUE)
ELSE(MSEED_FOUND AND ((MSEED_VERSION VERSION_GREATER "3") OR (MSEED_VERSION VERSION_EQUAL "3")))
    SET(MSEED_CORRECT_VERSION_FOUND FALSE)
ENDIF(MSEED_FOUND AND ((MSEED_VERSION VERSION_GREATER "3") OR (MSEED_VERSION VERSION_EQUAL "3")))

IF(MSEED_CORRECT_VERSION_FOUND)
    SET(MSEED_BUILD FALSE CACHE BOOL "build static libmseed")
ELSE(MSEED_CORRECT_VERSION_FOUND)
    SET(MSEED_BUILD TRUE CACHE BOOL "build static libmseed")
ENDIF(MSEED_CORRECT_VERSION_FOUND)

IF(MSEED_BUILD)
    IF (MSVC)
        SET(MAKE_CMD nmake /F Makefile.win)
        SET(mseed_lib mseed.lib)
    ELSE (MSVC)
        SET(MAKE_CMD CFLAGS=\"-std=c99\" make)
        SET(mseed_lib libmseed.a)
    ENDIF (MSVC)
    ExternalProject_Add(MSEED_LIBRARY 
        PREFIX ${CMAKE_CURRENT_BINARY_DIR}/libmseed
        GIT_REPOSITORY https://github.com/iris-edu/libmseed.git
        GIT_TAG mseed3-simpleheader
        #        CONFIGURE_COMMAND ""
        CONFIGURE_COMMAND ${CMAKE_COMMAND} -E copy_directory <SOURCE_DIR> <BINARY_DIR>
        BUILD_COMMAND ${MAKE_CMD}
        #        BUILD_IN_SOURCE TRUE
        INSTALL_COMMAND ""
        )

    ExternalProject_Get_Property(MSEED_LIBRARY binary_dir)

    ADD_LIBRARY(MSEED_LIBRARIES STATIC IMPORTED)

    SET_PROPERTY(TARGET MSEED_LIBRARIES PROPERTY IMPORTED_LOCATION
        ${binary_dir}/${mseed_lib})

    ADD_DEPENDENCIES(MSEED_LIBRARIES MSEED_LIBRARY)

ELSEIF (NOT MSEED_CORRECT_VERSION_FOUND)
    MESSAGE(FATAL_ERROR "xSEED-utils requires libmseed >= 3.0.0")
ENDIF(MSEED_BUILD)

IF (WJELEMENT_FOUND)
    SET(WJELEMENT_BUILD FALSE CACHE BOOL "Build static libwsjelement vs using
    system one")
ELSE (WJELEMENT_FOUND)
    SET(WJELEMENT_BUILD TRUE CACHE BOOL "Build static libwsjelement vs using
    system one")
ENDIF (WJELEMENT_FOUND)

IF (WJELEMENT_BUILD)
    ExternalProject_Add(WJELEMENT_LIBRARY
        GIT_REPOSITORY https://github.com/netmail-open/wjelement.git
        CMAKE_ARGS -DSTATIC_LIB=y
        INSTALL_COMMAND ""
        )
    ExternalProject_Get_Property(WJELEMENT_LIBRARY binary_dir)
    ADD_LIBRARY(WJELEMENT_LIBRARIES STATIC IMPORTED)
    SET_PROPERTY(TARGET WJELEMENT_LIBRARIES PROPERTY IMPORTED_LOCATION
        ${binary_dir}/src/wjelement/libwjelement.a)
    ADD_DEPENDENCIES(WJELEMENT_LIBRARIES WJELEMENT_LIBRARY)
ELSEIF(NOT WJELEMENT_FOUND)
    MESSAGE(FATAL_ERROR "xseed-utils requires wsjelement")
ENDIF(WJELEMENT_BUILD)
